design template, models, controllers added

--- a/DopeWeb/Views/Home/Index.cshtml
+++ b/DopeWeb/Views/Home/Index.cshtml
@@ -127,6 +127,7 @@
                 <div class="section-title">
                     <h2>Merchandise</h2>
                     <p>Here's a collection of Dope merchandise for my fam. Limited Stock Only. Grab one!</p>
+                    <a  class="btn btn-primary" href="/Home/ViewMerchandise"  target="_blank"   >Buy Now </a>
                 </div>
 
                 <div class="row">
@@ -254,11 +255,11 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <div class="portfolio-img"><img src="~/img/portfolio/portfolio-6.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-img"><img src="~/img/DopePics/DevilsTrynaKillMe.png" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
                             <h4>App 3</h4>
                             <p>App</p>
-                            <a href="~/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
+                            <a href="~/img/DopePics/DevilsTrynaKillMe.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
@@ -275,7 +276,7 @@
                         <div class="portfolio-img"><img src="~/img/DopePics/PFSM.jpg" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
                             <h4>Perfect For Somebody Else!</h4>
-                            <a href="~/img/DopePics/69721555_754695718283045_2454068532531429376_n.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
+                            <a href="~/img/DopePics/PFSM.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
                         </div>
                     </div>
 
