updates added,design changed

--- a/DopeWeb/Views/Home/Index.cshtml
+++ b/DopeWeb/Views/Home/Index.cshtml
@@ -6,10 +6,8 @@
 
     <!-- ======= Hero Section ======= -->
     <section id="hero">
-        <div class="hero-container">
-            <h1>Welcome to the Dope World!</h1>
-            <h2>Stay tuned for some lit music!</h2>
-            <a href="#about" class="btn-get-started scrollto">Get Started</a>
+        <div class="hero-container" style="position: absolute; bottom: 400px;">
+            @*<a href="#about" class="btn-get-started scrollto">Get Started</a>*@
         </div>
     </section><!-- End Hero -->
     <!-- ======= Header ======= -->
