--- a/DopeWeb/Views/Home/ViewMerchandise.cshtml
+++ b/DopeWeb/Views/Home/ViewMerchandise.cshtml
@@ -5,98 +5,123 @@
     }
 </style>
 
-<div id="container" class="container">
-    <br />
-    <div class="row">
-        <div class="col-md-12">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 m-2" id="main">
+
+<header id="header" class="d-flex align-items-center ">
+    <div class="container-fluid d-flex align-items-center justify-content-lg-between">
+
+        <h1 class="logo me-auto me-lg-0"><a href="index.html">R.A DOPE</a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="~/img/logo.png" alt="" class="img-fluid"></a>-->
+
+        <nav id="navbar" class="navbar order-last order-lg-0">
+            <ul>              
+
+                <li><button class="btn-buy" id="viewCart" >View Cart</button></li>
+            </ul>
+            <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav><!-- .navbar -->
 
 
-            </div>
-        </div>
+
     </div>
+</header><!-- End Header -->
 
-    <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
-        <div class="container">
 
-            <div class="section-title">
-                <h2>Merchandise</h2>
-            </div>
 
-            <div class="row">
+    <div id="container" class="container">
 
-                <div class="col-lg-3 col-md-6">
-                    <div class="box">
-                        <img src="../product-images/hoodie1.jpeg" class="img" alt="Image">
-                        <h4><sup>$</sup>0</h4>
-                        <b>Blue Hoodie</b>
-                        <div class="btn-wrap">
-                            <a href="#" class="btn-buy">Buy Now</a>
-                        </div>
-                    </div>
+        <section id="pricing" class="pricing">
+            <div class="container">
+
+                <div class="section-title">
+                    <h2>Merchandise</h2>
+                </div>
+
+                <div id="main">
+
+
                 </div>
 
             </div>
+        </section><!-- End Pricing Section -->
+    </div>
 
-        </div>
-    </section><!-- End Pricing Section -->
-</div>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {
 
-<script>
-    $(document).ready(function () {
+            var products = [];
+            var html = '';
+            $.ajax(
+                {
+                    url: "/Home/GetProducts",
+                    method: "GET",
+                    async: false,
+                    success: function (result) {
+                        products = result;
+                    },
+                    complete: function (res) {
+                        populateData();
+                    }
 
-        var products = [];
-        var html = '';
-        $.ajax(
-            {
-                url: "/Home/GetProducts",
-                method: "GET",
-                async: false,
-                success: function (result) {
-                    products = result;
-                },
-                complete: function (res) {
-                    populateData();
-                }
+                })
 
-            })
+            function populateData() {
+                debugger;
+                html = "<div class='row'>";''
+                $.each(products, function (k, v) {
+                    var image = v['imageURL'];
+                    var name = v['name'];
+                    var price = v['price'];
+                    var code = v['code'];
+                    var id = v['id'];
 
-        function populateData() {
-            debugger;
-
-            $.each(products, function (k, v) {
-                var image = v['imageURL'];
-                var name = v['name'];
-                var price = v['price'];
-                var temp = `<div class='col'>
-                        <div class='card shadow-sm'>
-                            <div class='card-body'>
-                                <p class='card-text'>${name}</p>
-                                <img src="../product-images/${image}" class="img" alt="Image">
-                                 <p>Description  : Sample Description</p>
-                                <div class='d-flex justify-content-between align-items-center'>
-                                    <div class='btn-group'>
-                                        <button type='button' id='${v['id']}' class='addToCart btn btn-sm btn-outline-secondary'>Add to Cart</button>
-                                    </div>
-                                    <p class='text-muted'>$${price}</small>
-                                </div>
+                    var temp = `
+                    <div class="col-lg-3 col-md-6">
+                        <div class="box">
+                            <img src="../product-images/${image}" class="img" alt="Image">
+                            <h4><sup>$</sup>${price}</h4>
+                            <b>${name}</b>
+                            <div class="btn-wrap">
+                                <button id="${id}" class="btn-buy addToCart">Add To Cart</button>
                             </div>
                         </div>
-                    </div>` ;
-                html = html.concat(temp);
-            });
+                    </div>`;
 
-            $("#main").append(html);
-        }
-
-
-
-
+                    html = html.concat(temp);
+                });
+                html = html.concat('</div>')
+                $("#main").append(html);
+            }
+        });
 
 
+        $(document.body).on('click', '.addToCart', function () {
+            var id = this.id;        
+            $.ajax(
+                {
+                    url: "/Home/AddToCart",
+                    method: "POST",
+                    data: { id: id, quantity: 1 },
+                    success: function (result)
+                    {
+                        alert("Product Added Successfully to Cart!");
+                    }
+                })
+        })
 
-    });
-</script>
+        $("#viewCart").on("click", function ()
+        {
+            $.ajax(
+                {
+                    url: "/Home/ViewCart",
+                    method: "GET",
+                    success: function (response)
+                    {
+                        $("#container").html(response);
+                    }
+                })
+        });
+
+    </script>
