--- a/DopeWeb/wwwroot/css/style.css
+++ b/DopeWeb/wwwroot/css/style.css
@@ -450,14 +450,15 @@ h1, h2, h3, h4, h5, h6 {
 
 /*--------------------------------------------------------------
 # Hero Section
+    RADOPE-3.png
 --------------------------------------------------------------*/
 #hero {
-  width: 100%;
-  height: 100vh;
-  background: url("../img/DopePics/RADOPE-3.png") top center;
-  background-size: cover;
-  position: relative;
-  margin-bottom: -70px;
+    width: 100%;
+    height: 100vh;
+    background: url("../img/DopePics/Dope.jpg") top center;
+    background-size: cover;
+    position: relative;
+    margin-bottom: -70px;
 }
 
 @media (max-width: 992px) {
@@ -468,8 +469,8 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero:before {
   content: "";
-  background: rgba(21, 5, 23, 0.5) linear-gradient(rgba(26, 0, 33, 0.5) 0%, rgba(26, 0, 33, 0.5) 5%, rgba(38, 6, 51, 0.5) 40%, rgba(147, 47, 69, 0.7) 76%, rgba(236, 97, 93, 0.7) 94%, rgba(236, 97, 93, 0.5) 100%) repeat scroll 0% 0%;
-  position: absolute;
+/*  background: rgba(21, 5, 23, 0.5) linear-gradient(rgba(26, 0, 33, 0.5) 0%, rgba(26, 0, 33, 0.5) 5%, rgba(38, 6, 51, 0.5) 40%, rgba(147, 47, 69, 0.7) 76%, rgba(236, 97, 93, 0.7) 94%, rgba(236, 97, 93, 0.5) 100%) repeat scroll 0% 0%;
+*/  position: absolute;
   bottom: 0;
   top: 0;
   left: 0;
