Checkout Page added

--- a/DopeWeb/Views/Home/Index.cshtml
+++ b/DopeWeb/Views/Home/Index.cshtml
@@ -1,11 +1,16 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <body>
 
     <!-- ======= Hero Section ======= -->
-    <section id="hero">
+    <section id="hero" style="position:relative;text-align:center;">
+        <div class="socials" >
+            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        </div>
         <div class="hero-container" style="position: absolute; bottom: 400px;">
             @*<a href="#about" class="btn-get-started scrollto">Get Started</a>*@
         </div>
@@ -14,7 +19,8 @@
     <header id="header" class="d-flex align-items-center ">
         <div class="container-fluid d-flex align-items-center justify-content-lg-between">
 
-            <h1 class="logo me-auto me-lg-0"><a href="index.html">R.A DOPE</a></h1>
+
+            <h1 class="logo me-auto me-lg-0"><a href="Home/Index">R.A DOPE</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="~/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -25,7 +31,7 @@
                     <li><a class="nav-link scrollto" href="#merchandise">Merchandise</a></li>
                     <li><a class="nav-link scrollto " href="#gallery">Gallery</a></li>
                     <li><a class="nav-link scrollto" href="#team">Team</a></li>
-                    
+
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -119,67 +125,58 @@
 
         </section><!-- End My Music Section -->
         <!-- ======= Merchandise Section ======= -->
-        <section id="merchandise" class="services">
+        <section id="merchandise" class="pricing">
             <div class="container">
 
                 <div class="section-title">
                     <h2>Merchandise</h2>
                     <p>Here's a collection of Dope merchandise for my fam. Limited Stock Only. Grab one!</p>
-                    <a  class="btn btn-primary" href="/Home/ViewMerchandise"  target="_blank"   >Buy Now </a>
+                    <br />
+                    <a class="btn-cls btn-checkout" style="padding: 8px 35px 9px 35px; " href="/Home/ViewMerchandise"  target="_blank" >View All Merchandise</a>
                 </div>
 
+
                 <div class="row">
-                    <div class="col-lg-4 col-md-6">
-                        <div class="icon-box">
-                            <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
-                            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-                            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
-                        <div class="icon-box">
-                            <div class="icon"><i class="bi bi-card-checklist" style="color: #e9bf06;"></i></div>
-                            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-                            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="box">
+                            <img src="../product-images/hoodie1.jpeg" class="img-cls" alt="Image">
+                            <h4><sup>$</sup>40</h4>
+                            <b>Hoodie</b>                          
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
-                        <div class="icon-box">
-                            <div class="icon"><i class="bi bi-bar-chart" style="color: #3fcdc7;"></i></div>
-                            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-                            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="box">
+                            <img src="../product-images/hoodie1.jpeg" class="img-cls" alt="Image">
+                            <h4><sup>$</sup>40</h4>
+                            <b>Hoodie</b>                            
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 mt-4">
-                        <div class="icon-box">
-                            <div class="icon"><i class="bi bi-binoculars" style="color:#41cf2e;"></i></div>
-                            <h4 class="title"><a href="">Magni Dolores</a></h4>
-                            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="box">
+                            <img src="../product-images/hoodie1.jpeg" class="img-cls" alt="Image">
+                            <h4><sup>$</sup>40</h4>
+                            <b>Hoodie</b>                           
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 mt-4">
-                        <div class="icon-box">
-                            <div class="icon"><i class="bi bi-brightness-high" style="color: #d6ff22;"></i></div>
-                            <h4 class="title"><a href="">Nemo Enim</a></h4>
-                            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="box">
+                            <img src="../product-images/hoodie1.jpeg" class="img-cls" alt="Image">
+                            <h4><sup>$</sup>40</h4>
+                            <b>Hoodie</b>
+                            
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 mt-4">
-                        <div class="icon-box">
-                            <div class="icon"><i class="bi bi-calendar4-week" style="color: #4680ff;"></i></div>
-                            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-                            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-                        </div>
-                    </div>
+
+
                 </div>
 
             </div>
         </section><!-- End Services Section -->
 
         <!-- ======= Cta Section ======= -->
-        <section id="cta" class="cta">
+        <!--<section id="cta" class="cta">
             <div class="container">
 
                 <div class="text-center">
@@ -189,7 +186,8 @@
                 </div>
 
             </div>
-        </section><!-- End Cta Section -->
+        </section>--><!-- End Cta Section -->
+
         <!-- ======= Gallery Section ======= -->
         <section id="gallery" class="portfolio">
             <div class="container">
@@ -290,94 +288,6 @@
 
             </div>
         </section><!-- End Gallery Section -->
-        <!-- ======= Team Section ======= -->
-        <section id="team" class="team section-bg">
-            <div class="container">
-
-                <div class="section-title">
-                    <h2>Team</h2>
-                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-                </div>
-
-                <div class="row">
-
-                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="~/img/team/team-1.jpg" class="img-fluid" alt="">
-                                <div class="social">
-                                    <a href=""><i class="bi bi-twitter"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
-                                </div>
-                            </div>
-                            <div class="member-info">
-                                <h4>Walter White</h4>
-                                <span>Chief Executive Officer</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="~/img/team/team-2.jpg" class="img-fluid" alt="">
-                                <div class="social">
-                                    <a href=""><i class="bi bi-twitter"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
-                                </div>
-                            </div>
-                            <div class="member-info">
-                                <h4>Sarah Jhonson</h4>
-                                <span>Product Manager</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="~/img/team/team-3.jpg" class="img-fluid" alt="">
-                                <div class="social">
-                                    <a href=""><i class="bi bi-twitter"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
-                                </div>
-                            </div>
-                            <div class="member-info">
-                                <h4>William Anderson</h4>
-                                <span>CTO</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="~/img/team/team-4.jpg" class="img-fluid" alt="">
-                                <div class="social">
-                                    <a href=""><i class="bi bi-twitter"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
-                                </div>
-                            </div>
-                            <div class="member-info">
-                                <h4>Amanda Jepson</h4>
-                                <span>Accountant</span>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-        </section><!-- End Team Section -->
-
 
         <!-- ======= Contact Section ======= -->
         <section id="contact" class="contact">
@@ -387,36 +297,7 @@
                     <h2>Contact</h2>
                     <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
                 </div>
-
-                <div>
-                    <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
-                </div>
-
                 <div class="row mt-5">
-
-                    <div class="col-lg-4">
-                        <div class="info">
-                            <div class="address">
-                                <i class="bi bi-geo-alt"></i>
-                                <h4>Location:</h4>
-                                <p>A108 Adam Street, New York, NY 535022</p>
-                            </div>
-
-                            <div class="email">
-                                <i class="bi bi-envelope"></i>
-                                <h4>Email:</h4>
-                                <p>info@example.com</p>
-                            </div>
-
-                            <div class="phone">
-                                <i class="bi bi-phone"></i>
-                                <h4>Call:</h4>
-                                <p>+1 5589 55488 55s</p>
-                            </div>
-
-                        </div>
-
-                    </div>
 
                     <div class="col-lg-8 mt-5 mt-lg-0">
 
@@ -450,37 +331,6 @@
             </div>
         </section><!-- End Contact Section -->
         <!-- ======= About Section ======= -->
-        <section id="about" class="about">
-            <div class="container">
-
-                <div class="section-title">
-                    <h2>About Us</h2>
-                </div>
-
-                <div class="row content">
-                    <div class="col-lg-6">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                            magna aliqua.
-                        </p>
-                        <ul>
-                            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-                            <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-                            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6 pt-4 pt-lg-0">
-                        <p>
-                            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                            culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                        <a href="#" class="btn-learn-more">Learn More</a>
-                    </div>
-                </div>
-
-            </div>
-        </section><!-- End About Section -->
 
     </main><!-- End #main -->
     <!-- ======= Footer ======= -->
@@ -493,7 +343,7 @@
                 <div class="row  justify-content-center">
                     <div class="col-lg-6">
                         <h3>Subscribe</h3>
-                        <p>Please subscribe to receive mail notifications of new releases, merchandise and shows tickets</p>
+                        <p>Please subscribe to receive mail notifications of new releases, merchandise and show tickets</p>
                     </div>
                 </div>
 
