--- a/DopeWeb/Views/Shared/_Layout.cshtml
+++ b/DopeWeb/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
     <script src="~/vendor/php-email-form/validate.js"></script>
     <script src="~/vendor/purecounter/purecounter.js"></script>
     <script src="~/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="~/js/jquery.unobtrusive-ajax.js"></script>
 
     <!-- Template Main JS File -->
     <script src="~/js/main.js"></script>
