--- a/DopeWeb/Views/Shared/_Layout.cshtml
+++ b/DopeWeb/Views/Shared/_Layout.cshtml
@@ -29,8 +29,8 @@
     </main>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - DopeWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container" style="margin-left:35%">
+            &copy; 2021 - DopeWeb - Developed By: <a href="https://www.linkedin.com/in/rahul-nagarkoti/" target="_blank">Rahul Nagarkoti</a> @*- <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
