initial deployment ready

--- a/DopeWeb/Views/Home/Index.cshtml
+++ b/DopeWeb/Views/Home/Index.cshtml
@@ -46,11 +46,11 @@
         <section id="MyMusic" class="our-values">
             <div class="container">
                 <div class="section-title">
-                    <h2>What's Hot?</h2>
+                    <h2>My Music</h2>
                 </div>
                 <div class="row">
                     <div class="col-md-4 d-flex align-items-stretch">
-                        <div class="card" style='background-image: url("/img/DopePics/Stage1.jpg");'>
+                        <div class="card" style='background-image: url("/img/DopePics/_MG_0103.jpg");'>
                             <div class="card-body">
                                 <h5 class="card-title cursiveFont"><a href="https://www.youtube.com/embed/UkwabxJig0o" target="_blank" id="textAnimate">Latest Release</a></h5>
                                 <iframe class="cardDesign" src="https://www.youtube.com/embed/UkwabxJig0o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 d-flex align-items-stretch mt-4 mt-md-0">
-                        <div class="card" style='background-image: url("/img/DopePics/Mic.jpg");'>
+                        <div class="card" style='background-image: url("/img/DopePics/RADOPE-1.png");'>
                             <div class="card-body">
                                 <h5 class="card-title cursiveFont"><a href="https://open.spotify.com/artist/39ir4YwTOZyIimko9SgDMw?si=ThGYEy8FTGODvHK7_6GA2Q&dl_branch=1" target="_blank">Spotify</a></h5>
                                 <iframe src="https://open.spotify.com/embed/artist/39ir4YwTOZyIimko9SgDMw" class="cardDesign" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
@@ -68,7 +68,7 @@
 
                     </div>
                     <div class="col-md-4 d-flex align-items-stretch mt-4 mt-md-0">
-                        <div class="card" style='background-image: url("/img/DopePics/Mic.jpg");'>
+                        <div class="card" style='background-image: url("/img/DopePics/DevilsTrynaKillMe.png");'>
                             <div class="card-body">
                                 <h5 class="card-title cursiveFont"><a href="https://music.apple.com/us/artist/r-a-dope/1485400265" target="_blank">Apple Music</a></h5>
                                 <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="250" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" src="https://embed.music.apple.com/us/album/dont-do-it-for-money-single/1493162417"></iframe>
@@ -138,40 +138,39 @@
                     <h2>Merchandise</h2>
                     <p>Here's a collection of Dope merchandise for my fam. Limited Stock Only. Grab one!</p>
                     <br />
-                    <a class="btn-cls btn-checkout" style="padding: 8px 35px 9px 35px; " href="/Home/ViewMerchandise" target="_blank">View All Merchandise</a>
+                    <a class="btn-cls btn-checkout" style="padding: 8px 35px 9px 35px; " href="#">View All Merchandise</a>
                 </div>
 
 
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
                         <div class="box">
-                            <img src="../product-images/hoodie1.jpeg" class="img-cls" alt="Image">
-                            <h4><sup>$</sup>40</h4>
-                            <b>Hoodie</b>
+                            <img src="../product-images/comingsoon.png" class="img-cls" alt="Image">
+                            <h4><sup>$</sup>35</h4>
+                            <b>Classic Dope Gang Hoodie</b>
                         </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6">
                         <div class="box">
-                            <img src="../product-images/hoodie1.jpeg" class="img-cls" alt="Image">
-                            <h4><sup>$</sup>40</h4>
-                            <b>Hoodie</b>
+                            <img src="../product-images/comingsoon.png" class="img-cls" alt="Image">
+                            <h4><sup>$</sup>30</h4>
+                            <b>Retro Hoodie</b>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="box">
-                            <img src="../product-images/hoodie1.jpeg" class="img-cls" alt="Image">
+                            <img src="../product-images/comingsoon.png" class="img-cls" alt="Image">
                             <h4><sup>$</sup>40</h4>
-                            <b>Hoodie</b>
+                            <b>Casual Hoodie</b>
                         </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6">
                         <div class="box">
-                            <img src="../product-images/hoodie1.jpeg" class="img-cls" alt="Image">
-                            <h4><sup>$</sup>40</h4>
+                            <img src="../product-images/comingsoon.png" class="img-cls" alt="Image">
+                            <h4><sup>$</sup>35</h4>
                             <b>Hoodie</b>
-
                         </div>
                     </div>
 
@@ -181,6 +180,7 @@
             </div>
         </section>
 
+        <!-- ======= Gallery Section ======= -->
         <section id="gallery" class="portfolio">
             <div class="container">
 
@@ -279,8 +279,8 @@
                 </div>
 
             </div>
-        </section><!-- End Gallery Section -->
-
+        </section>
+        <!-- End Gallery Section -->
 
     </main><!-- End #main -->
     <!-- ======= Footer ======= -->
@@ -289,19 +289,21 @@
         <div class="footer-top">
 
             <div class="container">
-
-                <div class="row  justify-content-center">
-                    <div class="col-lg-6">
-                        <h3>Subscribe</h3>
-                        <p>Please subscribe to receive mail notifications of new releases, merchandise and show tickets</p>
+                <div id="footerBlock">
+                    <div class="row  justify-content-center">
+                        <div class="col-lg-6">
+                            <h3>Subscribe</h3>
+                            <p id="footerMsg">Please subscribe to receive mail notifications of new releases, merchandise and show tickets</p>
+                        </div>
                     </div>
-                </div>
 
-                <div class="row footer-newsletter justify-content-center">
-                    <div class="col-lg-6">
-                        <form action="" method="post">
-                            <input type="email" name="email" placeholder="Enter your Email"><input type="submit" class="subscribe" value="Subscribe">
-                        </form>
+                    <div class="row footer-newsletter justify-content-center">
+                        <div class="col-lg-6">
+                            <form action="" method="post">
+                                <input type="email" id="footerEmail" name="email" placeholder="Enter your Email">
+                                <input type="button"  id="subscribeFootBtn"  value="Subscribe" style="position: absolute; top: 0; right: -1px; bottom: 0; border: 0; background: none; font-size: 16px; padding: 0 20px; background: #ff7f5d; color: #fff; transition: 0.3s; 	 box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1); " />
+                            </form>
+                        </div>
                     </div>
                 </div>
 
@@ -311,7 +313,6 @@
                     <a href="https://www.instagram.com/r.a.dope/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                     <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
                 </div>
-
             </div>
         </div>
 
@@ -347,7 +348,7 @@
                         <div class="input-group mb-3">
                             <input type="text" id="email" class="form-control" placeholder="Enter your Email">
                             <div class="input-group-append">
-                                <button class="btn subscribe" id="subscribeBtn" type="submit" style="background-color: #ff7f5d;color:white">Subscribe</button>
+                                <button class="btn subscribe"  id="subscribeBtn"  style="background-color: #ff7f5d;color:white">Subscribe</button>
                             </div>
                         </div>
 
@@ -374,14 +375,18 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script>
     $(function () {
-
+        $("#subscribeBtn, #subscribeFootBtn").mouseenter(function () {
+            $(this).css("background-color", "#ff9f86");
+        });
+        $("#subscribeBtn, #subscribeFootBtn").mouseleave(function () {
+            $(this).css("background-color", "#ff7f5d");
+        }).mouseleave();
+        //show dialog
         setTimeout(function () {
             $("#modalButton").click();
         }, 4000)
-
         //dialog
-        $("#subscribeBtn").on('click', function () {
-            debugger;
+        $("#subscribeBtn").on('click', function () {            
             email = $("#email").val();
             if (validateEmail(email)) {
                 $.ajax(
@@ -392,7 +397,7 @@
                         success: function (res) {
                             $("#modalBody").html('<p><b>Thank you for your subscription. Welcome to the family</b></p>')
                             //close the dialog  
-                            debugger;
+                            
                             setTimeout(function () {
                                 $('#closeModal').click();
                             }, 2000)
@@ -407,7 +412,28 @@
             }
 
         })
+        $("#subscribeFootBtn").on('click', function () {
+            email = $("#footerEmail").val();
+            if (validateEmail(email)) {
+                $.ajax(
+                    {
+                        url: "Home/Subscribe",
+                        data: { email: email },
+                        method: "POST",
+                        success: function (res) {
+                            $("#footerBlock").html('<p><b>Thank you for your subscription. Welcome to the family</b></p>')
+              
 
+                        }
+
+                    })
+            }
+            else {
+                $("p#footerMsg").html("The email is invalid!")
+                //invalid email
+            }
+
+        })
         function validateEmail(userinput)
         {
             var pattern = /^\b[A-Z0-9._%-]+@@[A-Z0-9.-]+\.[A-Z]{2,4}\b$/i
