--- a/DopeWeb/wwwroot/css/style.css
+++ b/DopeWeb/wwwroot/css/style.css
@@ -9,14 +9,22 @@ body {
 
 #main {
     background-color: #e7e6e4;
+    background-image:url("../img/DopePics/background.PNG");
+        background-position:center;
 }
-/*.testimonials    {
-    background-color: #e7e6e4 !important;
-}*/
 
-subscribeBtn:hover {
-    background: #ff9f86;
+.testimonials {
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ff7f5d;
+    background-image: url("../img/DopePics/background.PNG");
 }
+
+.section-title a:hover {
+    color: #ff0000;
+}
+
+
 
 .modal-footer a {
     font-size: xx-large;
@@ -356,7 +364,7 @@ h1, h2, h3, h4, h5, h6 {
         align-items: center;
         justify-content: space-between;
         padding: 0 3px;
-        font-size: 15px;
+        font-size: 18px;
         font-weight: 600;
         white-space: nowrap;
         transition: 0.3s;
@@ -570,7 +578,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("../img/DopePics/Dope.jpg") top center;
+    background: url("../img/DopePics/Dope_Cartoonized.png") top center;
     background-size: cover;
     position: relative;
     margin-bottom: -70px;
@@ -1648,7 +1656,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-    background: url("../img/DopePics/Dope.jpg") center center no-repeat;
+    background: url("../img/DopePics/Dope_Cartoonized.png") center center no-repeat;
     color: #fff;
     font-size: 14px;
     position: relative;
